<resources>
    <string name="app_name">BroncoPals</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered? Login</string>
    <string name="need_register">Need an Account? Register</string>
    <string name="login_button">Log In</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="major">Major</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="hobby">Hobby</string>
    <string name="about_me">About Me</string>
    <string name="create_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="logo_description">BroncoPal Logo</string>
    <string name="verify_email">Verify Email\nFor\nProfile Creation</string>
    <string name="verified">I Verified !!</string>
    <string name="upload_image">Upload Pictures to Appeal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>

</resources>