<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyEmailActivity"
    android:background="@color/green">
    <TextView
        android:id="@+id/VerifyHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/verify_email"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/broncopal_logo"
        android:layout_width="123dp"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/bronco_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VerifyHold" />

    <Button
        android:id="@+id/Verified"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="128dp"
        android:background="@color/gold"
        android:gravity="center"
        android:text="@string/verified"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/broncopal_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>