<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/green"
    tools:context=".RegistrationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_signup_page_border"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/createProfileText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_profile"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="36sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/uploadimg"
                android:layout_width="200dp"
                android:src="@drawable/baseline_upload_24"
                android:background="@drawable/edittext_border"
                android:layout_gravity="center_horizontal"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside" />


            <EditText
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/baseline_menu_book_24"
                android:drawablePadding="8dp"
                android:hint="@string/major"
                android:autofillHints="major"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/baseline_cake_24"
                android:drawablePadding="8dp"
                android:hint="@string/age"
                android:autofillHints="age"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/hobby"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/baseline_sports_esports_24"
                android:drawablePadding="8dp"
                android:hint="@string/hobby"
                android:autofillHints="hobby"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/baseline_description_24"
                android:drawablePadding="8dp"
                android:hint="@string/about_me"
                android:autofillHints="about_me"
                android:padding="8dp"
                android:textColor="@color/black" />
            

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>